<resources>
    <string name="app_name">pretixSCAN</string>
    <string name="title_activity_main">pretixSCAN</string>
    <string name="headline_setup">Welcome to pretixSCAN!</string>
    <string name="action_sync">Synchronize now</string>
    <string name="progress_syncing_first">Downloading event configuration…</string>
    <string name="progress_syncing">Synchronizing with server…</string>
    <string name="progress_processing">Processing…</string>
    <string name="progress_registering">Registering device with server…</string>
    <string name="error_access_revoked">Device access has been revoked, you need to register the device with the server again.</string>
    <string name="error_unknown_exception">An unknown error has occurred</string>
    <string name="error_exception">An error has occurred</string>
    <string name="error_not_synchronized">Your device has not been properly synchronized with the server</string>
    <string name="action_label_ok">OK</string>
    <string name="action_label_settings">Settings</string>
    <string name="action_label_statistics">Statistics</string>
    <string name="action_label_scantype_entry">Switch to entry scanning</string>
    <string name="action_label_scantype_exit">Switch to exit scanning</string>
    <string name="action_multievent_enable">Expert mode (select multiple events)</string>
    <string name="action_multievent_disable">Disable expert mode</string>
    <string name="action_multievent_disable_error">Expert mode cannot be disabled if multiple events are selected.</string>
    <string name="scantype_entry">Entry</string>
    <string name="scantype_exit">Exit</string>
    <string name="scantype_entry_kiosk">Scan your ticket to check in</string>
    <string name="scantype_entry_kiosk_print">Scan your ticket to print your badge</string>
    <string name="scantype_exit_kiosk">Scan your ticket to check out</string>
    <string name="checktype_online">Online verification</string>
    <string name="checktype_offline">Offline verification</string>
    <string name="checktype_proxy">Base station verification</string>
    <string name="debug_info_event">Event: %1$s</string>
    <string name="debug_info_subevent">Date: %1$s (%2$s)</string>
    <string name="debug_info_list">List: %1$s</string>
    <string name="debug_info_gate">Gate: %1$s</string>
    <string name="debug_info_device">Device: %1$s</string>
    <string name="action_search">Search</string>
    <string name="operation_select_event">Select Event</string>
    <string name="operation_select_events">Select Events</string>
    <string name="events_selected">%s events selected</string>
    <string name="operation_select_checkinlist">Select Check-in list</string>
    <string name="settings_label_auto_sync">Automatic Synchronization</string>
    <string name="settings_label_orders_sync">Download orders</string>
    <string name="settings_summary_orders_sync">Without this option, pretixSCAN will not download order data and not be able to scan offline tickets with pretix\'s default settings.</string>
    <string name="settings_label_auto_switch">Automatic event selection</string>
    <string name="settings_summary_auto_switch">With this option, pretixSCAN will ask the server during synchronization if the server suggests switching the app to a different event and check-in list and then switches automatically.</string>
    <plurals name="sync_status_time_minutes">
        <item quantity="one">synchronized %d minute ago</item>
        <item quantity="other">synchronized %d minutes ago</item>
    </plurals>
    <plurals name="sync_status_time_hours">
        <item quantity="one">synchronized %d hour ago</item>
        <item quantity="other">synchronized %d hours ago</item>
    </plurals>
    <plurals name="sync_status_time_days">
        <item quantity="one">synchronized %d day ago</item>
        <item quantity="other">synchronized %d days ago</item>
    </plurals>
    <string name="sync_status">Synchronization status</string>
    <string name="sync_status_last">Last successful synchronization:</string>
    <string name="sync_status_last_failed">Last failed synchronization:</string>
    <string name="sync_status_never">not yet synchronized</string>
    <string name="sync_status_progress">synchronization is running</string>
    <string name="sync_status_now">synchronized just now</string>
    <plurals name="sync_status_pending">
        <item quantity="one">%d pending upload</item>
        <item quantity="other">%d pending uploads</item>
    </plurals>
    <string name="sync_status_date_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="short_datetime_format">MM/dd HH:mm</string>
    <string name="short_datetime_format_seconds">MM/dd HH:mm:ss</string>
    <string name="first_scanned">First scanned: %s</string>
    <string name="datetime_format">%1$tY-%1$tm-%1$td %1$tH:%1$tM</string>
    <string name="ok">OK</string>
    <string name="welcome_text">pretixSCAN is a event entry app that you can use to validate tickets that you sold through pretix.</string>
    <string name="welcome_disclaimer1">I understand that personal data of attendees of my connected events will be stored on this device and I will secure the device properly.</string>
    <string name="cont">CONTINUE</string>
    <string name="hint_url">URL</string>
    <string name="hint_token">Token</string>
    <string name="dismiss">Dismiss</string>
    <string name="settings_label_verification">Ticket verification</string>
    <string name="settings_label_sync">Synchronization</string>
    <string name="settings_label_ui">User interface</string>
    <string name="settings_label_about">About this app</string>
    <string name="settings_label_licenses">Author and licenses</string>
    <string name="settings_label_screen_always_on">Keep display awake</string>
    <string name="settings_label_device_camera">Use device camera</string>
    <string name="settings_label_scan_offline">Offline scanning</string>
    <string name="settings_label_auto_offline">Automatically turn offline mode on and off</string>
    <string name="settings_label_auto_offline_help">If you select one of the times below, the app will automatically switch to an offline scan whenever an online scan takes longer than selected. Additionally, the app will fully switch to offline mode after multiple scans failed or took longer than selected. Once a connection has proven stable again, the app will switch back.</string>
    <string-array name="settings_valuelabels_auto_offline">
        <item>Manual mode (off)</item>
        <item>1 second or errors</item>
        <item>2 seconds or errors</item>
        <item>3 seconds or errors</item>
        <item>5 seconds or errors</item>
        <item>10 seconds or errors</item>
        <item>15 seconds or errors</item>
        <item>20 seconds or errors</item>
        <item>Only errors or connection loss</item>
    </string-array>
    <string name="settings_summary_scan_offline">When scanning offline, your device will verify all input with its internal database instead with the server and synchronize its database with the server occasionally. This is more reliable, but allows a ticket to be scanned twice if you scan with multiple devices.</string>
    <string name="settings_label_sounds">Play sounds</string>
    <string name="settings_label_hide_names">Hide names and other personal information</string>
    <string name="settings_label_hide_names_summary">Does not affect search, useful e.g. in combination with kiosk mode</string>
    <string name="settings_label_badges">Badges</string>
    <string name="preference_badges_twice">Print every badge twice</string>
    <string name="settings_label_details">Details</string>
    <string name="pref_unpaid_ask">Ask before checking in unpaid tickets</string>
    <string name="pref_ignore_questions">Do not ask questions during check-in</string>
    <string name="pref_unpaid_ask_summary">When the check-in list is set to include pending orders, this setting controls whether you will be asked before they are being checked in.</string>
    <string name="question_validation_error">Some of your input could not be validated.</string>
    <string name="question_input_required">This field is required.</string>
    <string name="question_input_invalid">This input is not valid.</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="status_redeemed">Redeemed</string>
    <string name="status_unpaid">Unpaid</string>
    <string name="status_canceled">Canceled</string>
    <string name="status_valid">Valid</string>
    <string name="status_empty">No search results have been found. Be sure to enter at least four characters.</string>
    <string name="scan_result_valid">Valid ticket</string>
    <string name="scan_result_exit">Exit recorded</string>
    <string name="scan_result_used">Ticket already used</string>
    <string name="scan_result_questions">Information required</string>
    <string name="scan_result_invalid">Invalid ticket</string>
    <string name="scan_result_product">Ticket type not valid here</string>
    <string name="scan_result_unpaid">Ticket not paid</string>
    <string name="scan_result_rules">Entry not allowed</string>
    <string name="scan_result_ambiguous">Ticket code is ambiguous on list</string>
    <string name="scan_result_revoked">Ticket code revoked/changed</string>
    <string name="scan_result_unapproved">Order not approved</string>
    <string name="scan_result_invalid_time">Ticket currently not valid</string>
    <string name="scan_result_blocked">Ticket blocked</string>
    <string name="scan_result_canceled">Order canceled</string>
    <string name="scan_result_already_exchanged">Ticket already exchanged</string>
    <string name="scan_result_medium_invalid">Reusable medium invalid</string>
    <string name="scan_result_medium_exists">Reusable medium already exists</string>
    <string name="scan_result_medium_exchange_required_offline">This ticket needs to be exchanged, but this isn\'t possible while offline</string>
    <string name="scan_result_medium_exchange_required">This ticket needs to be exchanged for a reusable medium</string>
    <string name="scan_result_answers_required">Questions need to be answered</string>
    <string name="error_sync_in_background">A synchronization is already running in the background.</string>
    <string name="preference_badgeprint_enable">Enable badge printing</string>
    <string name="preference_autobadgeprint_enable">Print badges automatically</string>
    <string name="already_scanned">already scanned</string>
    <string name="total_tickets_sold">total tickets sold</string>
    <string name="force_full_resync">Force a full synchronization</string>
    <string name="settings_label_datawedge">Install DataWedge profile</string>
    <string name="settings_label_version">Version</string>
    <string name="settings_label_troubleshooting">Troubleshooting</string>
    <string name="settings_label_device_name">Device name</string>
    <string name="force_full_resync_help">This will not delete any of your local data, but it will force the next synchronization of every event to be a full synchronization, i.e. downloading all data again instead of only changed data.</string>
    <string name="full_delete">Delete all local data and reset device</string>
    <string name="pin_protection">PIN protection</string>
    <string name="currently_inside">currently attending</string>
    <string name="event_select_calendar">Show calendar</string>
    <string name="headline_please_reinstall">Please reinstall pretixSCAN</string>
    <string name="reinstall_text">Your previous pretixSCAN version was too old and your local data cannot be used for the current version.\n\nPlease clear the storage for the pretixSCAN app or delete and reinstall the app.</string>
    <string name="reinstall_open_app_settings">Open Android App Settings</string>
</resources>