<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <PreferenceCategory android:title="@string/settings_label_verification">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_scan_offline"
            android:summary="@string/settings_summary_scan_offline"
            android:title="@string/settings_label_scan_offline" />
        <eu.pretix.pretixscan.droid.ui.AutoOfflineListPreference
            android:defaultValue="off"
            android:entries="@array/settings_valuelabels_auto_offline"
            android:entryValues="@array/settings_values_auto_offline"
            android:key="pref_auto_offline"
            android:summary="%s"
            android:title="@string/settings_label_auto_offline" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_label_sync">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_sync_auto"
            android:title="@string/settings_label_auto_sync" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_sync_orders"
            android:summary="@string/settings_summary_orders_sync"
            android:title="@string/settings_label_orders_sync" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_auto_switch"
            android:summary="@string/settings_summary_auto_switch"
            android:title="@string/settings_label_auto_switch" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_label_ui">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_screen_always_on"
            android:title="@string/settings_label_screen_always_on" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_use_camera"
            android:title="@string/settings_label_device_camera" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_sounds"
            android:title="@string/settings_label_sounds" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_haptics"
            android:title="@string/settings_label_haptics" />
        <Preference
            android:fragment="eu.pretix.pretixscan.droid.ui.PinSettingsFragment"
            android:key="pin_protect"
            android:title="@string/pin_protection" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_hide_names"
            android:summary="@string/settings_label_hide_names_summary"
            android:title="@string/settings_label_hide_names" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_label_badges">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_print_badges"
            android:title="@string/preference_badgeprint_enable" />
        <ListPreference
            android:dependency="pref_print_badges"
            android:key="pref_auto_print_badges_option"
            android:defaultValue="once"
            android:entries="@array/settings_valuelabels_auto_print_badges"
            android:entryValues="@array/settings_values_auto_print_badges"
            android:title="@string/preference_autobadgeprint_enable"
            android:summary="%s" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="pref_print_badges"
            android:key="pref_print_badges_twice"
            android:title="@string/preference_badges_twice" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_label_details">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_unpaid_ask"
            android:summary="@string/pref_unpaid_ask_summary"
            android:title="@string/pref_unpaid_ask" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_ignore_questions"
            android:title="@string/pref_ignore_questions" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_label_about">
        <Preference
            android:key="version"
            android:title="@string/settings_label_version" />
        <Preference
            android:key="device_name"
            android:title="@string/settings_label_device_name" />
        <Preference
            android:key="licenses"
            android:title="@string/settings_label_licenses" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_label_troubleshooting">
        <Preference
            android:key="datawedge_install"
            android:title="@string/settings_label_datawedge" />
        <Preference
            android:key="full_resync"
            android:summary="@string/force_full_resync_help"
            android:title="@string/force_full_resync" />
        <Preference
            android:key="full_delete"
            android:title="@string/full_delete" />
    </PreferenceCategory>
</PreferenceScreen>